; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_memory.c_test_config_memory__write_operations_fail.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_memory.c_test_config_memory__write_operations_fail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@backend = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"general.foo\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"var\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_memory__write_operations_fail() #0 {
  %1 = call i32 @setup_backend(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %2 = load i32, i32* @backend, align 4
  %3 = call i32 @git_config_backend_set_string(i32 %2, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @cl_git_fail(i32 %3)
  %5 = load i32, i32* @backend, align 4
  %6 = call i32 @git_config_backend_delete(i32 %5, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  %7 = call i32 @cl_git_fail(i32 %6)
  %8 = load i32, i32* @backend, align 4
  %9 = call i32 @git_config_backend_lock(i32 %8)
  %10 = call i32 @cl_git_fail(i32 %9)
  %11 = load i32, i32* @backend, align 4
  %12 = call i32 @git_config_backend_unlock(i32 %11, i32 0)
  %13 = call i32 @cl_git_fail(i32 %12)
  ret void
}

declare dso_local i32 @setup_backend(i8*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_config_backend_set_string(i32, i8*, i8*) #1

declare dso_local i32 @git_config_backend_delete(i32, i8*) #1

declare dso_local i32 @git_config_backend_lock(i32) #1

declare dso_local i32 @git_config_backend_unlock(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
